hphp/hack/test/typecheck/include_once_strict.php.exp
File "include_once_strict.php", line 2, characters 1-30:
Hack does not support top level statements. Use the `__EntryPoint` attribute on a function instead (Naming[2128])
